Bug 303053 - no confirmation dialog after adding a missing attachment
Summary: no confirmation dialog after adding a missing attachment
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.9 pre
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-05 09:58 UTC by qqqqqqqqq9
Modified: 2012-07-06 08:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2012-07-05 09:58:15 UTC
Scenario:
1. kmail detects a missing attachment
2. the user adds the missing attachment
3. The email is send WITHOUT further confirmation

Possible Problems:
1. The user might have double-clicked the wrong file and has just send the wrong file.
2. The user has no possibility to send more than one file.

Possible solution:
Adding the attachment should cancel the sending.



Reproducible: Always

Steps to Reproduce:
1. Write an email containing a reference to an attachment
2. send it
3. add the attachment when the attachment confirmation dialog pops up
Actual Results:  
The email is send without further confirmation dialog

Expected Results:  
The email should only be send after an additional confirmation
Comment 1 Laurent Montel 2012-07-06 06:58:16 UTC
I confirm it
Comment 2 Laurent Montel 2012-07-06 07:29:31 UTC
Git commit 9dc2cd71163e8cd46f942063721e04b471e2c312 by Montel Laurent.
Committed on 06/07/2012 at 09:28.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 303053 - no confirmation dialog after adding a missing

attachment
FIXED-IN: 4.9

M  +6    -4    kmail/kmcomposewin.cpp
M  +1    -4    kmail/kmcomposewin.h
M  +7    -6    messagecomposer/composerviewbase.cpp
M  +7    -3    messagecomposer/composerviewbase.h

http://commits.kde.org/kdepim/9dc2cd71163e8cd46f942063721e04b471e2c312
Comment 3 Laurent Montel 2012-07-06 08:16:49 UTC
Git commit cd800c4c479df6e355fddaf0b5d02de06174c60f by Montel Laurent.
Committed on 06/07/2012 at 09:28.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 303053 - no confirmation dialog after adding a missing

attachment
FIXED-IN: 4.9
(cherry picked from commit 9dc2cd71163e8cd46f942063721e04b471e2c312)

M  +6    -4    kmail/kmcomposewin.cpp
M  +1    -4    kmail/kmcomposewin.h
M  +7    -6    messagecomposer/composerviewbase.cpp
M  +7    -3    messagecomposer/composerviewbase.h

http://commits.kde.org/kdepim/cd800c4c479df6e355fddaf0b5d02de06174c60f