Fix Bug 303053 - no confirmation dialog after adding a missing

attachment
FIXED-IN: 4.9
BUG: 303053
(cherry picked from commit 9dc2cd71163e8cd46f942063721e04b471e2c312)